--- a/now.json
+++ b/now.json
@@ -2,8 +2,11 @@
 	"version": 2,
 	"builds": [
 		{ "src": "*.php", "use": "@now/php" },
-		{ "src": "js", "use": "@now/static" },
-		{ "src": "img", "use": "@now/static" },
-		{ "src": "css", "use": "@now/static" }
+		{ "src": "css/elements/*.php", "use": "@now/php" },
+		{ "src": "css/modules/*.php", "use": "@now/php" },
+		{ "src": "css/global/*.php", "use": "@now/php" },
+		{ "src": "css/lib/*.php", "use": "@now/php" }
+		{ "src": "img/*", "use": "@now/static" },
+		{ "src": "js/*", "use": "@now/static" },
 	]
 }
