--- a/now.json
+++ b/now.json
@@ -7,6 +7,10 @@
 		{ "src": "css/global/*.php", "use": "@now/php" },
 		{ "src": "css/lib/*.php", "use": "@now/php" },
 		{ "src": "img/*", "use": "@now/static" },
-		{ "src": "js/*", "use": "@now/static" }
+		{ "src": "js/*.js", "use": "@now/static" },
+		{ "src": "js/lib/*.js", "use": "@now/static" }
+		{ "src": "js/lib/hyphenator/*.js", "use": "@now/static" }
+		{ "src": "js/lib/hyphenator/patterns/*.js", "use": "@now/static" }
+
 	]
 }
