--- a/now.json
+++ b/now.json
@@ -8,8 +8,8 @@
 		{ "src": "css/lib/*.php", "use": "@now/php" },
 		{ "src": "img/*", "use": "@now/static" },
 		{ "src": "js/*.js", "use": "@now/static" },
-		{ "src": "js/lib/*.js", "use": "@now/static" }
-		{ "src": "js/lib/hyphenator/*.js", "use": "@now/static" }
+		{ "src": "js/lib/*.js", "use": "@now/static" },
+		{ "src": "js/lib/hyphenator/*.js", "use": "@now/static" },
 		{ "src": "js/lib/hyphenator/patterns/*.js", "use": "@now/static" }
 
 	]
