--- a/now.json
+++ b/now.json
@@ -6,7 +6,8 @@
 		{ "src": "css/modules/*.php", "use": "@now/php" },
 		{ "src": "css/global/*.php", "use": "@now/php" },
 		{ "src": "css/lib/*.php", "use": "@now/php" },
-		{ "src": "pages/*.txt", "use": "@now/static" },
+		{ "src": "pages/a1", "use": "@now/static" },
+		{ "src": "pages/*", "use": "@now/static" },
 		{ "src": "img/*", "use": "@now/static" },
 		{ "src": "js/*.js", "use": "@now/static" },
 		{ "src": "js/lib/*.js", "use": "@now/static" },
