--- a/now.json
+++ b/now.json
@@ -1,11 +1,12 @@
 {
 	"version": 2,
 	"builds": [
-		{ "src": "*.php", "use": "@now/php" },
 		{ "src": "css/elements/*.php", "use": "@now/php" },
 		{ "src": "css/modules/*.php", "use": "@now/php" },
 		{ "src": "css/global/*.php", "use": "@now/php" },
 		{ "src": "css/lib/*.php", "use": "@now/php" },
+		{ "src": "*.php", "use": "@now/php" },
+		{ "src": "*.html", "use": "@now/static" },
 		{ "src": "pages/*", "use": "@now/static" },
 		{ "src": "img/*", "use": "@now/static" },
 		{ "src": "js/*.js", "use": "@now/static" },
