--- a/now.json
+++ b/now.json
@@ -9,6 +9,7 @@
 		{ "src": "*.html", "use": "@now/static" },
 		{ "src": "pages/*", "use": "@now/static" },
 		{ "src": "img/*", "use": "@now/static" },
+		{ "src": "img/708206/*", "use": "@now/static" },
 		{ "src": "js/*.js", "use": "@now/static" },
 		{ "src": "js/lib/*.js", "use": "@now/static" },
 		{ "src": "js/lib/hyphenator/*.js", "use": "@now/static" },
